Add requirements for all blocks